# Ignis-Example-Project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  IgnisExampleProject.igproj  README.md
assets/: TestAR.igar
assets/images/brown_photostudio_02_4k/: brown_photostudio_02_4k_irradiance.hdr  brown_photostudio_02_4k_radiance.hdr
assets/images/citrus_orchard_puresky_4k/: citrus_orchard_puresky_4k_irradiance.hdr  citrus_orchard_puresky_4k_radiance.hdr
assets/scenes/: LoadingScene.igscene  SecondScene.igscene  StartScene.igscene
assets/scripts/: ButtonClick.cpp  CameraController.cpp  LoadingScreenController.cpp  RotateSelf.cpp  ScriptModuleExports.cpp  SecondSceneController.cpp  StartSceneController.cpp  TestCollision.cpp
